--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -22,6 +22,8 @@ jobs:
             ls -a
             echo $RANDOM >> random.txt
             ls -a
+            git add -A
+            git commit -m "Random file"
             git push
         - name: Create issue using REST API
           run: |
