added strategy matrix

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,15 +1,19 @@
-name: Actions Workflow
-
-on: [push]
+name: Matrix
+on: push
 
 jobs:
-  run-github-actions:
-   runs-on: ubuntu-20.04
-   steps:
-    - name: Simple JS Action
-      id: greet
-      uses: actions/hello-world-javascript-action@v1
-      with:
-        who-to-greet: Ian
-    - name: Log Greeting Time
-      run: echo "${{ steps.greet.outputs.time }}"
+  node-version:
+    strategy:
+      matrix: 
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        node_version: [6,8,10,16]
+      fail-fast: true
+    runs-on: ${{ matrix.os }}
+    steps: 
+      - name: Log node version
+        run: node -v
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node_version }}
+      - name: Log node version
+        run: node -v
